datatable extra padding fix for listing approval

--- a/public/less/theme/dashboard.less
+++ b/public/less/theme/dashboard.less
@@ -338,6 +338,20 @@ a{
 	}
 }
 
+.list-approval-tab{
+	&.table{
+		&>tbody>tr>td,
+		&>tbody>tr>th,
+		&>tfoot>tr>td,
+		&>tfoot>tr>th,
+		&>thead>tr>td,
+		&>thead>tr>th{
+			padding: 10px 7px;
+		}
+	}
+}
+
+
 .dataTable{
 	.sorting, .sorting_asc, .sorting_desc{
 		padding-right: 0 !important;
